1999-10-04 Olof S Kylander <olof@gimp.org>

	* app/color_cmds.c
	
	removed the bug fix for 2306 and 2208
	It is autogen code so ...

1999-10-04  Sven Neumann <sven@gimp.org>

	* app/tool_options.c: fixed bug #2511

1999-10-04 Olof S Kylander <olof@gimp.org>

	* app/color_cmds.c

	fixed bug report 2306 and 2208

1999-10-04  Sven Neumann <sven@gimp.org>

	* app/tool_options.c: backed out a change from last weekend that was
	never supposed to get into CVS

	* libgimp/gimpexport.[ch]: added a third button.
	Now "Export" performs the conversion, "Ignore" skips it and continues 
	and "Cancel" cancels the save.

	* plug-ins/bmp/bmp.c
	* plug-ins/common/gif.c
	* plug-ins/common/jpeg.c
	* plug-ins/common/png.c
	* plug-ins/common/ps.c
	* plug-ins/common/tiff.c 
	* plug-ins/print/print.c: sync with the new interface.

	* plug-ins/common/Makefile.am 
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/tga.c
	* plug-ins/common/xpm.c: two more save plug-ins that know about export.

	* plug-ins/script-fu/script-fu.c: include script-fu-constants.h

1999-10-03 Olof S Kylander <olof@frozenriver.com>
	
	* app/airbrush_blob.c
	* app/xinput_airbrush.c

	A bit better airbrush. It is still ugly but it now
	looks like airbrush. This is a tool for Wacom 
	tables it is no use to use it with a mouse.

1999-10-03  Sven Neumann <sven@gimp.org>

	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/Makefile.am: 
	the Makefile.am is autogenerated of course...

1999-10-3  Simon Budig  <Simon.Budig@unix-ag.org>

	* app/path_tool.h
	* app/path_tool.c
	* app/path_toolP.h
	* app/path_curves.h
	* app/path_curves.c
	* app/path_bezier.h
	* app/path_bezer.c

	Lots of stuff for the bezier-tool which will be also used for the
	interface for the intelligent scissors. I started to factor out the
	formulas for the actual curve type, so it is some kind of independant.
	To try this out simply change the "#if 0" in app/path_curve.c to
	a "#if 1" to handle straight lines instead of strange beziers with