@@ -508,6 +508,16 @@ if test $ac_cv_path_LPC_COMMAND != ":"; then
   LPC_DEF="-DLPC_COMMAND=\\\"$ac_cv_path_LPC_COMMAND\\\""
 fi
 
+dnl This is for the help browser
+AC_PATH_PROG(GNOME_CONFIG,gnome-config,no)
+if test "$GNOME_CONFIG" = "no"; then
+  HELPBROWSER=
+else
+  GTKXMHTML_CFLAGS=`$GNOME_CONFIG --cflags gnomeui`
+  GTKXMHTML_LIBS=`$GNOME_CONFIG --libs gtkxmhtml`
+  HELPBROWSER=helpbrowser
+fi
+
 dnl This is for the gimp-perl plug-in
 AC_ARG_ENABLE(perl, [  --disable-perl          do not build perl extension [by default enabled]
   --enable-perl[=prefix]  use specified prefix for perl (see INSTALL)])
@@ -647,6 +657,9 @@ AC_SUBST(GIMP_MP_LIBS)
 AC_SUBST(GIMP_PERL)
 AC_SUBST(GIMPDOCS)
 AC_SUBST(GIMPINSTALL)
+AC_SUBST(HELPBROWSER)
+AC_SUBST(GTKXMHTML_CFLAGS)
+AC_SUBST(GTKXMHTML_LIBS)
 
 dnl easy way to skip the plug-in build
 GIMP_PLUGINS=plug-ins
@@ -700,6 +713,7 @@ plug-ins/gimpressionist/Makefile
 plug-ins/gimpressionist/Brushes/Makefile
 plug-ins/gimpressionist/Paper/Makefile
 plug-ins/gimpressionist/Presets/Makefile
+plug-ins/helpbrowser/Makefile
 plug-ins/ifscompose/Makefile
 plug-ins/imagemap/Makefile
 plug-ins/maze/Makefile
