@@ -1,14 +1,0 @@
-CFLAGS = `gtk-config --cflags` -g -Wall -ansi
-
-LDFLAGS = `gtk-config --libs` `gimptool --libs` -lgtkxmhtml
-
-OBJECTS = helpbrowser.o queue.o
-
-TARGET = helpbrowser
-
-$(TARGET): $(OBJECTS)
-	$(CC) -o $(TARGET) $(OBJECTS) $(LDFLAGS)
-
-.PHONY: clean
-clean:
-	-rm -f $(OBJECTS)
